--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-	<title>Резюме - Антон Черепков</title>
+		<meta charset="utf-8">
+		<title>Резюме - Антон Черепков</title>
   </head>
   
   <body>
