--- a/task3/index.html
+++ b/task3/index.html
@@ -2,6 +2,8 @@
   <head>
     <meta charset="utf-8">
     <title>Менеджер задач</title>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script src="app.js"></script>
   </head>
   
   <body>
